<resources>
    <string name="app_name">Denter Professional</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="default_notification_channel_id" translatable="false">canal_padrao</string>
    <string name="fcm_default_title_message" translatable="false">Mensagem</string>
    <string name="notifications_are_disabled_fragment_label">Notificações desabilitadas</string>
    <string name="Nome_EmergencyDetail">Nome: %s</string>
    <string name="Telefone_EmergencyDetail">Telefone: %s</string>
    <string name="title_activity_users_detai_profile">UsersDetailProfile</string>
    <string name="title_activity_user_detail_profile">UserDetailProfileActivity</string>
    <string name="detalhes_da_conta">Detalhes da Conta</string>
    <string name="my_map_api_key">AIzaSyBVLOL-G3xIHVebCg9OU4RattHrvTvIT0U</string>
    <string name="telefone">Telefone:</string>
    <string name="e_mail">E-mail:</string>
    <string name="confirme_o_e_mail">Confirme o E-mail:</string>
    <string name="senha">Senha:</string>
    <string name="confirme_sua_senha">Confirme sua senha:</string>
    <string name="b_proximo">Próximo</string>
    <string name="j_tem_uma_conta">Já tem uma conta?</string>
    <string name="faca_login">Faça login</string>
    <string name="nome">Nome:</string>
    <string name="cep">CEP</string>
    <string name="linha_de_endereco_1">Linha de Endereço 1</string>
    <string name="linha_de_endereco_2_opcional">Linha de Endereço 2 (Opcional)</string>
    <string name="linha_de_endereco_3_opcional">Linha de Endereço 3 (Opcional)</string>
    <string name="mini_curriculo">Mini-Currículo</string>
    <string name="finalizar_cadastro">Finalizar Cadastro</string>
    <string name="nomeusu_rio">nomeUsuário</string>
    <string name="usuarioemail_email_com">usuarioemail@email.com</string>
    <string name="mudar_a_foto_de_perfil">Mudar a foto de Perfil</string>
    <string name="atendendo_emerg_ncias">Atendendo Emergências</string>
    <string name="deslogar">Deslogar</string>
    <string name="entrar">Entrar</string>
    <string name="n_o_possui_uma_conta">Não possui uma conta?</string>
    <string name="cadastrar_se">Cadastrar-se</string>
    <string name="aguardando_o_paciente">Aguardando o paciente</string>
    <string name="ir_para_mapa">Ir Para MAPA</string>
    <string name="atender">Atender</string>
    <string name="telefonar">Telefonar</string>
    <string name="b_goToSocorrista">Ir até o local</string>
    <string name="b_receiveSocorrista">Receber Paciente</string>
    <string name="endereco_1">Endereço 1:</string>
    <string name="endereco_2">Endereço 2:</string>
    <string name="endereco_3">Endereço 3:</string>
    <string name="atualizar">Atualizar</string>
    <string name="voltar">Voltar</string>
    <string name="aceitar">Aceitar</string>
    <string name="recusar">Recusar</string>
    <string name="tirar_foto">Tirar Foto</string>
    <string name="confirmar">Confirmar</string>
    <string name="m_emergencias">Emergências</string>
    <string name="m_reputacao">Reputação</string>
    <string name="m_profile">Profile</string>
</resources>