<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_in_up"
    tools:context=".UserDetailProfileActivity">

    <ProgressBar
        android:id="@+id/signUPProgressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:theme="@style/MyProgressbar"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="137dp">

        <com.google.android.material.textfield.TextInputLayout

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/nome"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiFone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/telefone"
                android:inputType="phone"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiCep"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/cep"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiAddress1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/endereco_1"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiAddress2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/endereco_2"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiAddress3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:hint="@string/endereco_3"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>
        <ScrollView
            android:layout_width="350dp"
            android:layout_height="90dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiResume"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:hint="@string/mini_curriculo"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>
        </ScrollView>
        <Button
            android:id="@+id/btnNext"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:text="@string/atualizar"
            android:textAllCaps="false"
            android:textSize="20sp" />
        <Button
            android:id="@+id/btnVoltar"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="0dp"
            android:text="@string/voltar"
            android:textAllCaps="false"
            android:textSize="20sp" />

    </LinearLayout>

</RelativeLayout>