<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_in_up"
    tools:context=".CameraActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgViewFoto"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:visibility="gone"
            android:layout_marginTop="50dp"/>
        <Button
            android:id="@+id/btnTirarFoto"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:text="@string/tirar_foto"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnConfirmar"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:text="@string/confirmar"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:visibility="gone"/>
        <Button
            android:id="@+id/btnVoltar"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:text="@string/voltar"
            android:textAllCaps="false"
            android:textSize="20sp"/>
        <ProgressBar
            android:id="@+id/signUPProgressBar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:theme="@style/MyProgressbar"
            android:visibility="gone"/>


    </LinearLayout>

</RelativeLayout>